[gd_scene load_steps=5 format=3 uid="uid://cs4kq7w8vfm2x"]

[ext_resource type="Script" uid="uid://bry2lao4faxjr" path="res://scripts/systems/WormholeTravelAnimation.gd" id="1_travel_anim"]
[ext_resource type="Shader" uid="uid://nhe461su8ua" path="res://shaders/wormhole_travel.gdshader" id="2_shader"]
[ext_resource type="Texture2D" uid="uid://bx7vvh5tmr4a3" path="res://assets/sprites/effects/art-purple-spiral-purple-background.png" id="3_spiral"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wormhole"]
shader = ExtResource("2_shader")
shader_parameter/warp_intensity = 0.0
shader_parameter/swirl_amount = 0.0
shader_parameter/chromatic_aberration = 0.0
shader_parameter/speed_lines = 0.0
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/time_offset = 0.0

[node name="WormholeTravelEffect" type="CanvasLayer"]
layer = 150
script = ExtResource("1_travel_anim")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]

[node name="ShaderRect" type="ColorRect" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_wormhole")
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="VignetteRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.1, 0.05, 0.2, 0)

[node name="SpiralTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -512.0
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(512, 512)
mouse_filter = 2
texture = ExtResource("3_spiral")
expand_mode = 1
stretch_mode = 5

[node name="CenterGlow" type="ColorRect" parent="."]
z_index = 4
offset_left = 540.0
offset_top = 260.0
offset_right = 740.0
offset_bottom = 460.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.7, 0)

[node name="ParticlesLayer1" type="CPUParticles2D" parent="."]
z_index = 5
position = Vector2(640, 360)
emitting = false

[node name="ParticlesLayer2" type="CPUParticles2D" parent="."]
z_index = 6
position = Vector2(640, 360)
emitting = false

[node name="ParticlesLayer3" type="CPUParticles2D" parent="."]
z_index = 7
position = Vector2(640, 360)
emitting = false
